force-app/main/default/objects/SmartIntake_Submission__c/SmartIntake_Submission__c.object-meta.xml
<CustomObject>
    <label>SmartIntake Submission</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartIntake Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>