force-app/main/default/objects/SmartIntake_Submission__c/fields/Answers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Answers_JSON__c</fullName>
    <label>Answers JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>