force-app/main/default/objects/SmartIntake_Submission__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <label>Guest Email</label>
    <type>Email</type>
</CustomField>