force-app/main/default/objects/SmartIntake_Submission__c/fields/Primary_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Text__c</fullName>
    <label>Primary Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>