force-app/main/default/objects/SmartIntake_Submission__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>