force-app/main/default/objects/SmartIntake_Submission__c/fields/Secondary_Text__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Text__c</fullName>
    <label>Secondary Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>